# revive-my-lover

./: BLOG.md  LICENSE  README.md  README_zh.md  TODO.md  build_and_publish.py  dashboard.py  demo_dashboard.html  demo_data_generator.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: bayesian_demo.py  bayesian_learning_demo.py  full_pipeline_demo.py  info_gain_demo.py  integration_example.py  optimal_stop_demo.py  pid_demo.py  pid_poisson_demo.py  preference_demo.py  quickstart.py  quickstart_unified.py  sde_demo.py  simulation_log.json  telegram_bot.py
src/poisson_love/: __init__.py  love.py
src/poisson_love/bayesian/: __init__.py
src/poisson_love/control/: __init__.py  pid.py
src/revive_companion/: __init__.py  engine.py  love.py  runner.py
src/revive_companion/adapters/: __init__.py  anthropic.py  base.py  generic.py
src/revive_companion/bayesian/: __init__.py  core.py  learner.py
src/revive_companion/control/: __init__.py  pid.py  preference.py  signal.py
src/revive_companion/core/: __init__.py  config.py  models.py
src/revive_companion/info_gain/: __init__.py  core.py  sources.py
src/revive_companion/optimal_stop/: __init__.py  core.py  signals.py
src/revive_my_lover/: __init__.py  love.py  runner.py
src/revive_my_lover/adapters/: __init__.py  anthropic.py  base.py  generic.py  openai.py
src/revive_my_lover/bayesian/: __init__.py  core.py  learner.py
src/revive_my_lover/control/: __init__.py  pid.py  preference.py  signal.py
src/revive_my_lover/core/: __init__.py  config.py  engine.py  models.py
src/revive_my_lover/info_gain/: __init__.py  core.py  sources.py
src/revive_my_lover/optimal_stop/: __init__.py  core.py  signals.py
src/revive_my_lover/sde/: __init__.py  core.py
tests/: __init__.py  test_bayesian.py  test_bayesian_learning.py  test_info_gain.py  test_love.py  test_models.py  test_optimal_stop.py  test_poisson_engine.py  test_sde.py
